--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,5 +6,8 @@ permissions:
   chester.*:
     children:
       chester.trigger: true
+      chester.log: true
   chester.trigger:
+    default: true
+  chester.log:
     default: true
